@@ -45,6 +45,54 @@ pl_implement_class(IEScale)
 
 
 //[-------------------------------------------------------]
+//[ Global functions                                      ]
+//[-------------------------------------------------------]
+// [TODO] This is just an experimental half image scale function without any filter - better as nothing for now!
+void ScaleDownHalfData(const ImageBuffer &cOldImageBuffer, ImageBuffer &cImageBuffer, uint32 nNewWidth, uint32 nNewHeight, uint32 nOldWidth, uint32 nOldHeight, const Matrix3x3 &mFilter)
+{
+	// Scale factors
+	const float fToOriginalWidthFactor  = float(nOldWidth) /nNewWidth;
+	const float fToOriginalHeightFactor = float(nOldHeight)/nNewHeight;
+
+	// Get the number of components
+	const uint32 nNumOfComponents = cOldImageBuffer.GetComponentsPerPixel();
+
+	// Loop through all components
+		  short *pNewData = (short*)cImageBuffer   .GetData();
+	const short *pOldData = (short*)cOldImageBuffer.GetData();
+	for (uint32 nComponent=0; nComponent<nNumOfComponents; nComponent++) {
+		// Loop through x
+		for (uint32 nX=0; nX<nNewWidth; nX++) {
+			// Loop through y
+			for (uint32 nY=0; nY<nNewHeight; nY++) {
+				// Get the orignal byte
+				const uint32 nOriginalX = uint32(nX*fToOriginalWidthFactor);
+				const uint32 nOriginalY = uint32(nY*fToOriginalHeightFactor);
+
+				// Get data
+				short nOriginalByte = 0;
+				{
+					// Get the current position on the original image
+					const int nCurrentX = (nOriginalX-1) + 1;
+					const int nCurrentY = (nOriginalY-1) + 1;
+
+					// Is this current position inside the original image?
+					if (nCurrentX >= 0 && nCurrentY >= 0 &&
+						nCurrentX < (int)nOldWidth && nCurrentY < (int)nOldHeight) {
+						// Get the component value of the original image
+						nOriginalByte = pOldData[(nCurrentY*nOldWidth + nCurrentX)*nNumOfComponents + nComponent];
+					}
+				}
+
+				// Set new byte
+				pNewData[(nY*nNewWidth + nX)*nNumOfComponents + nComponent] = nOriginalByte;
+			}
+		}
+	}
+}
+
+
+//[-------------------------------------------------------]
 //[ Classes                                               ]
 //[-------------------------------------------------------]
 /**
@@ -80,6 +128,8 @@ class ScaleDownData {
 		*/
 		ScaleDownData(const ImageBuffer &cOldImageBuffer, ImageBuffer &cImageBuffer, uint32 nNewWidth, uint32 nNewHeight, uint32 nOldWidth, uint32 nOldHeight, const Matrix3x3 &mFilter)
 		{
+			// [TODO] Resize images in linear space instead of gamma space! Maybe we should add image space information to a image so we now in which space the image data is stored? (linear, gamma...)
+
 			// Scale factors
 			const float fToOriginalWidthFactor  = float(nOldWidth) /nNewWidth;
 			const float fToOriginalHeightFactor = float(nOldHeight)/nNewHeight;
@@ -270,6 +320,12 @@ bool IEScale::Apply(ImageBuffer &cImageBuffer) const
 			case DataWord:
 			{
 				ScaleDownData<uint16> cScaleDownData(cOldImageBuffer, cImageBuffer, nNewWidth, nNewHeight, nOldWidth, nOldHeight, mFilter);
+				break;
+			}
+
+			case DataHalf:
+			{
+				ScaleDownHalfData(cOldImageBuffer, cImageBuffer, nNewWidth, nNewHeight, nOldWidth, nOldHeight, mFilter);
 				break;
 			}
 
