@@ -673,7 +673,7 @@ bool Texture::Load(const String &sFilename, const String &sParams, const String 
 
 				// Is texture compression allowed in general? (for none floating point formats only)
 				TextureBuffer::EPixelFormat nInternalFormat = TextureBuffer::Unknown;
-				if (pImageBuffer->GetDataFormat() != DataFloat && GetTextureManager().IsTextureCompressionAllowed()) {
+				if (pImageBuffer->GetDataFormat() != DataHalf && pImageBuffer->GetDataFormat() != DataFloat && GetTextureManager().IsTextureCompressionAllowed()) {
 					// Check if texture compression should be used internally and the image is currently not compressed
 					switch (m_nCompressionHint) {
 						case Default:
@@ -718,9 +718,9 @@ bool Texture::Load(const String &sFilename, const String &sParams, const String 
 						m_nCompressionHint = None; // Do never ever use texture compression!
 				}
 
-				// Currently, GrayscaleA and RGB is not supported by float formats, so, just convert to RGBA so we're still able to use the image data as texture!
-				if (pImageBuffer->GetDataFormat() == DataFloat && (pImageBuffer->GetColorFormat() != ColorGrayscale || pImageBuffer->GetColorFormat() != ColorRGB))
-					cImage.ApplyEffect(ImageEffects::Convert(DataFloat, ColorRGBA));
+				// Currently, GrayscaleA and RGB is not supported by half/float formats, so, just convert to RGBA so we're still able to use the image data as texture!
+				if ((pImageBuffer->GetDataFormat() == DataHalf || pImageBuffer->GetDataFormat() == DataFloat) && (pImageBuffer->GetColorFormat() != ColorGrayscale || pImageBuffer->GetColorFormat() != ColorRGB))
+					cImage.ApplyEffect(ImageEffects::Convert((pImageBuffer->GetDataFormat() == DataHalf) ? DataHalf : DataFloat, ColorRGBA));
 
 				// Create the renderer texture buffer resource
 				TextureBuffer *pTextureBuffer;
