@@ -1,4 +1,6 @@
 Changes in PixelLight 0.9.5-R1 (not yet released)
+- Feature: "PLGraphics": Added basic support for half as image data format
+- Feature: "PLGraphics::ImageLoaderDDS": Added support for half/float images
 - Change (Windows): Migrated from Microsoft Visual Studio 2008 to Microsoft Visual Studio 2010 as the main development IDE
 - Change (Windows): OpenAL: Updated "OpenAL32.dll" from "6.14.357.22" to version "6.14.357.24", updated "wrap_oal.dll" from "2.1.8.1" to version "2.2.0.5"
 - Change (Windows): Updated "Newton Game Dynamics" from "2.24" to "2.28"
